# open-lifeworlds-data-product-cookiecutter

./: .gitignore  README.md  cookiecutter.json
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  main.py  pyproject.toml  requirements.txt
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/docs/: data-product-canvas.md
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/: tracking_decorator.py
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/config/: data_product_manifest_loader.py  data_transformation_loader.py
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/documentation/: data_product_canvas_generator.py  data_product_manifest_updater.py
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/extract/: data_copier.py  data_extractor.py
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/load/: data_loader.py
open-lifeworlds-data-product-{{cookiecutter.data_product_id}}/lib/transform/: data_copier.py
